1.2.9
    - 增加 WRP_INLINE_STYLE/WRP_EXLINE_STYLE/WRP_INLINE_SCRIPT/WRP_EXLINE_SCRIPT 配置支持

1.2.8   (2016-01-12)
    - 优化参数解析方式
    - 命令行增加发布模式配置支持
    - 命令行增加日志级别配置支持

1.2.7   (2015-10-23)
    - 增加X_AUTO_EXLINK_SCRIPT配置支持脚本中资源解析

1.2.6   (2015-10-12)
    - 修正标签解析时属性“=”前后带空格的异常
    - 调整全局变量配置的优先级

1.2.5   (2015-09-23)
    - 修改脚本默认混淆级别为0
    - noparse标签内的静态资源解析
    - 模块版本输出时过滤模板文件

1.2.4   (2015-09-18)
    - 修正代码中#<uispace>打包异常

1.2.3   (2015-09-15)
    - 修正样式中部分静态资源路径未调整异常

1.2.2   (2015-09-08)
1.2.1
1.2.0
1.1.9
    - NEJ模块内联模板不使用WRP_INLINE_SOURCE配置包装
    - 输入目录存在包含关系给出警告提示
    - 增加FILE_EXCLUDE配置参数支持
    - 修正插件解析的html文件被作为输入文件时的异常
    - 修正模板内联脚本出现包装结束节点的异常
    - 修正标签属性为空的情况下输出异常

1.1.8   (2015-08-28)
1.1.7
    - 增加页面压缩配置参数支持 CPRS_FLAG/CPRS_KEEP_COMMENT
    - 修正标签换行异常

1.1.6   (2015-08-26)
1.1.5
    - 修正NEJ模板中静态资源加版本号异常
    - 修正样式背景图静态资源

1.1.4   (2015-08-11)
    - 移除NEI构建工具相关内容

1.1.3   (2015-08-04)
1.1.2
    - 调整webapp项目输出结构
    - 增加puer配置输出

1.1.1   (2015-07-31)
1.1.0
1.0.9
    - 调整NEJ define.js替换规则
    - 增加npmignore文件忽略安装测试用例
    - 支持nej export指令
    - 支持NEJ模块单独导出

1.0.8   (2015-07-30)
1.0.7
1.0.6
    - 支持NEJ源码二次包装
    - 修正mac下路径多次补全问题
    - 修正define.js路径上配置信息读取异常

1.0.5   (2015-07-27)
1.0.4
    - 支持老版本针对Opera的Patcher
    - 修正define依赖列表中带版本号无法识别路径问题
    - 样式解析异常时采用字符串匹配方式调整资源路径

1.0.3   (2015-07-24)
1.0.2
1.0.1
    - 修正函数参数、返回结果识别
    - 修正发布过程出现error错误没有退出流程
    - 构建工具对接NEI平台接口

1.0.0   (2015-07-21)
    - 工具整体重构
    - 增加HTML标签解析
    - 精简/合并配置参数

0.5.6
0.5.5   (2015-04-17)
    - NAME_SUFFIX支持版本配置标记[VERSION]

0.5.4   (2015-03-25)
    - 修正对象属性带引号时变量被混淆问题，如{"_abc":"aaa"} 这里_abc不混淆

0.5.3   (2015-03-13)
    - 支持RegularJS预解析脚本识别配置NEJ_REGULAR

0.5.2   (2015-01-19)
    - 增加X_KEEP_COMMENT配置参数支持
    - regularjs容错
    - 回退regularjs版本至 0.2.13
    - 调整静态资源解析策略

0.4.9   (2014-12-26)
    - 增加OBF_DROP_CONSOLE配置参数支持
    
0.4.8   (2014-12-16)
    - 修正非全平台下打包输出异常

0.4.7   (2014-11-16)
    - 增加日志级别设置参数X_LOGGER_LEVEL

0.4.6   (2014-11-14)
    - 修正页面独立解析时I$函数缺失bug
    