@@ -49,6 +49,41 @@ pro._dumpModuleVersion = (function(){
     };
 })();
 /**
+ * check resource in html file
+ * @private
+ * @param  {Object} options - resource check options
+ * @param  {Boolean}options.lnkCheck    - check resource in script
+ * @param  {String} options.webRoot     - webapp root
+ * @param  {String} options.resRoot     - resource root
+ * @param  {Boolean}options.versionStac - add version to resource
+ * @param  {Array}  options.rsDomain    - resource domain
+ * @return {Void}
+ */
+pro._checkResInHtmlFile = function(options){
+    // check resource domain
+    var domains = options.rsDomain;
+    if (!options.lnkCheck||
+        !domains||!domains.length){
+        return;
+    }
+    // check all html file
+    var handler = function(event){
+        if (event.type=='script'){
+            event.value = this._checkResInScript(
+                event.file,
+                event.content,
+                options
+            );
+        }
+    };
+    // san all files
+    this._list.forEach(
+        function(parser){
+            parser.scan(handler,this);
+        },this
+    );
+};
+/**
  * check resource in script
  * @param  {String} file    - script file path
  * @param  {String} content - script content
@@ -230,6 +265,9 @@ pro.merge = function(config){
  * @return {Void}
  */
 pro.minify = function(config,options){
+    // check resource in html file
+    this._checkResInHtmlFile(options);
+    // format config
     config = config||{};
     // parse name bags
     var bagfile = config.bags;
