@@ -684,6 +684,17 @@ pro._formatContent = function(content,config){
     );
 };
 /**
+ * scan buffer to do something with style/script
+ * @param  {Function} func  - do something
+ * @param  {Object}   scope - function scope
+ * @return {Void}
+ */
+pro.scan = function(callback,scope){
+    _io.getFromCache(this._uri).scan(
+        callback,scope
+    );
+};
+/**
  * output content
  * @param  {Object} config - config object
  * @param  {String} config.charset     - output file charset
