@@ -263,6 +263,39 @@ pro.parse = function(config){
     });
 };
 /**
+ * scan buffer for doing something with style/script text
+ * @param  {Function} func  - do something
+ * @param  {Object}   scope - function scope
+ * @return {Void}
+ */
+pro.scan = (function(){
+    var reg = /^<\/?(style|script)>$/i;
+    return function(func,scope){
+        if (!_util.isFunction(func)){
+            return;
+        }
+        var opt = null;
+        this.buffer.forEach(function(content,index,list){
+            if (reg.test(content)){
+                if (content.indexOf('/')>0){
+                    // for end style/script
+                    opt = null;
+                }else{
+                    // for start style/script
+                    opt = {type:RegExp.$1};
+                }
+            }else if(!!opt){
+                opt.file = this._file;
+                opt.content = content;
+                func.call(scope||null,opt);
+                if (opt.value!=null){
+                    list[index] = opt.value;
+                }
+            }
+        },this);
+    };
+})();
+/**
  * serialize content
  * @return {String} content
  */
