@@ -16,6 +16,10 @@
 <p>4444444444444444444444444</p>
 <!-- /@IGNORE -->
 
+<style>
+    .a{background:url(/res/image/loading.gif);}
+</style>
+
 <script src="/src/javascript/widget.js"></script>
 
 <script>console.log("/res/image/loading.gif")</script>
