@@ -7,10 +7,14 @@ describe('parser/html',function(){
     describe('new Parser',function(){
          it('should be ok for parse html file',function(){
              var parser = new Parser({
-                 content:fs.read(__dirname+'/cloud.ftl').join('\n')
+                 noParseFlag:3,
+                 content:fs.read(__dirname+'/a.ftl').join('\n')
+             });
+             //console.log('%s',JSON.stringify(parser,null,4));
+             parser.scan(function(event){
+                 console.log('%s : %s',event.type,event.content);
              });
              parser.should.be.an.instanceof(Parser);
-             console.log('%s',JSON.stringify(parser,null,4));
          });
         //it('should be ok for parse freemarker file',function(){
         //    var parser = new Parser({
